--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,7 +10,36 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="72dp"
+        android:layout_marginBottom="35dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/com_facebook_likeboxcountview_border_color"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/followButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="1dp"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                android:text="Follow" />
+
+            <Button
+                android:id="@+id/challenge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="1dp"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                android:text="Challenge" />
+        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -26,14 +55,16 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/egg" />
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/userPic"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_alignParentTop="false"
                 android:layout_centerHorizontal="false"
                 android:layout_centerInParent="true"
-                android:src="@drawable/com_facebook_button_background" />
+                android:src="@color/colorPrimaryDark"
+                app:civ_border_color="@android:color/black"
+                app:civ_border_width="4dp" />
 
             <TextView
                 android:id="@+id/username"
@@ -42,11 +73,65 @@
                 android:layout_alignParentBottom="false"
                 android:layout_below="@+id/userPic"
                 android:layout_centerInParent="true"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="2dp"
+                android:shadowColor="@android:color/black"
+                android:shadowDx="-1"
+                android:shadowDy="-1"
+                android:shadowRadius="1"
                 android:text="username"
                 android:textColor="@android:color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
         </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/cookingNum"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                android:gravity="center"
+                android:text="Cooking" />
+
+            <LinearLayout
+                android:layout_width="2dp"
+                android:layout_height="23dp"
+                android:layout_gravity="center_vertical"
+                android:background="@color/com_facebook_likeboxcountview_border_color"
+                android:orientation="vertical"></LinearLayout>
+
+            <TextView
+                android:id="@+id/followersNum"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                android:gravity="center"
+                android:text="Followers" />
+
+            <LinearLayout
+                android:layout_width="2dp"
+                android:layout_height="23dp"
+                android:layout_gravity="center_vertical"
+                android:background="@color/com_facebook_likeboxcountview_border_color"
+                android:orientation="vertical"></LinearLayout>
+
+            <TextView
+                android:id="@+id/followingNum"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                android:gravity="center"
+                android:text="Following" />
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
