--- a/app/src/main/res/layout/singlerow_refrigerator.xml
+++ b/app/src/main/res/layout/singlerow_refrigerator.xml
@@ -32,9 +32,8 @@
     <ImageView
         android:id="@+id/sign"
         android:layout_width="40dp"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        app:srcCompat="@drawable/warning" />
+        android:layout_height="40dp"
+        android:layout_marginLeft="10dp" />
 
     <TextView
         android:id="@+id/num"
