--- a/app/src/main/res/layout/singlerow_feed.xml
+++ b/app/src/main/res/layout/singlerow_feed.xml
@@ -55,10 +55,10 @@
         <ImageView
             android:id="@+id/foodPic"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="350dp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/egg"/>
+            app:srcCompat="@drawable/egg" />
 
         <LinearLayout
             android:layout_width="match_parent"
