--- a/app/src/main/res/layout/activity_letmetry.xml
+++ b/app/src/main/res/layout/activity_letmetry.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.cookzyme.cookzyme.letmetry">
+    tools:context="com.example.cookzyme.cookzyme.ref.letmetry">
 
 </android.support.constraint.ConstraintLayout>
