--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -58,9 +58,9 @@
                     android:layout_alignParentTop="false"
                     android:layout_centerHorizontal="false"
                     android:layout_centerInParent="true"
-                    android:src="@color/colorPrimaryDark"
+                    android:src="@drawable/com_facebook_button_icon_blue"
                     app:civ_border_color="@android:color/black"
-                    app:civ_border_width="4dp" />
+                    app:civ_border_width="4dp"/>
 
                 <TextView
                     android:id="@+id/username"
