--- a/app/src/main/res/layout/singlerow_feed.xml
+++ b/app/src/main/res/layout/singlerow_feed.xml
@@ -26,10 +26,11 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="20dp"
                 android:scaleType="centerCrop"
-                app:srcCompat="@drawable/com_facebook_profile_picture_blank_square"/>
+                android:src="@drawable/avatar"
+                />
 
             <TextView
-                android:id="@+id/userName"
+                android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
@@ -59,8 +60,9 @@
             android:layout_width="fill_parent"
             android:layout_height="350dp"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/egg"/>
+            android:scaleType="centerCrop"
+            android:src="@drawable/egg"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -90,7 +92,8 @@
                 android:layout_marginLeft="20dp"
                 android:scaleX="0.7"
                 android:scaleY="0.7"
-                app:srcCompat="@drawable/carrot_grey"/>
+                android:src="@drawable/carrot_grey"
+                />
 
             <TextView
                 android:id="@+id/likeNum"
