--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -4,181 +4,181 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:id="@+id/linear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentStart="false"
+        android:orientation="vertical">
+
         <LinearLayout
-            android:id="@+id/linear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="false"
-            android:layout_alignParentStart="false"
-            android:orientation="vertical">
+            android:background="@color/com_facebook_likeboxcountview_border_color"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/followButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="1dp"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                android:text="Follow" />
+
+            <Button
+                android:id="@+id/challengeButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="1dp"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                android:text="Challenge"/>
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="150dp">
+
+            <ImageView
+                android:id="@+id/headerPic"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_alignParentTop="true"
+                android:adjustViewBounds="true"
+                android:alpha="0.7"
+                android:scaleType="centerCrop"
+                android:src="@drawable/egg"/>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/userPic"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_alignParentTop="false"
+                android:layout_centerHorizontal="false"
+                android:layout_centerInParent="true"
+                android:src="@color/colorPrimaryDark"
+                app:civ_border_color="@android:color/black"
+                app:civ_border_width="4dp" />
+
+            <TextView
+                android:id="@+id/username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="false"
+                android:layout_below="@+id/userPic"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="2dp"
+                android:shadowColor="@android:color/black"
+                android:shadowDx="-1"
+                android:shadowDy="-1"
+                android:shadowRadius="1"
+                android:text="username"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="horizontal"
+            android:weightSum="3">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/com_facebook_likeboxcountview_border_color"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/followButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="1dp"
-                    android:layout_weight="1"
-                    android:background="@android:color/white"
-                    android:text="Follow" />
-
-                <Button
-                    android:id="@+id/challengeButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="1dp"
-                    android:layout_weight="1"
-                    android:background="@android:color/white"
-                    android:text="Challenge"/>
-            </LinearLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="150dp">
-
-                <ImageView
-                    android:id="@+id/headerPic"
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:layout_alignParentTop="true"
-                    android:adjustViewBounds="true"
-                    android:alpha="0.7"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/egg"/>
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/userPic"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:layout_alignParentTop="false"
-                    android:layout_centerHorizontal="false"
-                    android:layout_centerInParent="true"
-                    android:src="@color/colorPrimaryDark"
-                    app:civ_border_color="@android:color/black"
-                    app:civ_border_width="4dp" />
+                android:id="@+id/cooking_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/username"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="false"
-                    android:layout_below="@+id/userPic"
-                    android:layout_centerInParent="true"
-                    android:layout_marginTop="2dp"
-                    android:shadowColor="@android:color/black"
-                    android:shadowDx="-1"
-                    android:shadowDy="-1"
-                    android:shadowRadius="1"
-                    android:text="username"
-                    android:textColor="@android:color/white"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-            </RelativeLayout>
+                    android:id="@+id/cookingNum"
+                    android:layout_width="match_parent"
+                    android:layout_height="18dp"
+                    android:background="@android:color/white"
+                    android:gravity="center"
+                    android:text="255" />
+
+                <TextView
+                    android:id="@+id/cookingText"
+                    android:layout_width="match_parent"
+                    android:layout_height="18dp"
+                    android:background="@android:color/white"
+                    android:gravity="center"
+                    android:text="Cookings" />
+
+            </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:orientation="horizontal"
-                android:weightSum="3">
+                android:layout_width="2dp"
+                android:layout_height="23dp"
+                android:layout_gravity="center_vertical"
+                android:background="@color/com_facebook_likeboxcountview_border_color"
+                android:orientation="vertical"></LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/cooking_layout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
+            <LinearLayout
+                android:id="@+id/follower_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/followersNum"
+                    android:layout_width="match_parent"
+                    android:layout_height="18dp"
+                    android:background="@android:color/white"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:text="255" />
 
-                    <TextView
-                        android:id="@+id/cookingNum"
-                        android:layout_width="match_parent"
-                        android:layout_height="18dp"
-                        android:background="@android:color/white"
-                        android:gravity="center"
-                        android:text="255" />
-
-                    <TextView
-                        android:id="@+id/cookingText"
-                        android:layout_width="match_parent"
-                        android:layout_height="18dp"
-                        android:background="@android:color/white"
-                        android:gravity="center"
-                        android:text="Cookings" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="2dp"
-                    android:layout_height="23dp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@color/com_facebook_likeboxcountview_border_color"
-                    android:orientation="vertical"></LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/follower_layout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
+                <TextView
+                    android:id="@+id/followersText"
+                    android:layout_width="match_parent"
+                    android:layout_height="18dp"
+                    android:background="@android:color/white"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:text="Followers" />
 
-                    <TextView
-                        android:id="@+id/followersNum"
-                        android:layout_width="match_parent"
-                        android:layout_height="18dp"
-                        android:background="@android:color/white"
-                        android:gravity="center"
-                        android:text="255" />
+            </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/followersText"
-                        android:layout_width="match_parent"
-                        android:layout_height="18dp"
-                        android:background="@android:color/white"
-                        android:gravity="center"
-                        android:text="Followers" />
+            <LinearLayout
+                android:layout_width="2dp"
+                android:layout_height="23dp"
+                android:layout_gravity="center_vertical"
+                android:background="@color/com_facebook_likeboxcountview_border_color"
+                android:orientation="vertical"></LinearLayout>
 
-                </LinearLayout>
+            <LinearLayout
+                android:id="@+id/following_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="2dp"
-                    android:layout_height="23dp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@color/com_facebook_likeboxcountview_border_color"
-                    android:orientation="vertical"></LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/following_layout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
+                <TextView
+                    android:id="@+id/followingNum"
+                    android:layout_width="match_parent"
+                    android:layout_height="18dp"
+                    android:background="@android:color/white"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:text="255" />
 
-                    <TextView
-                        android:id="@+id/followingNum"
-                        android:layout_width="match_parent"
-                        android:layout_height="18dp"
-                        android:background="@android:color/white"
-                        android:gravity="center"
-                        android:text="255" />
-
-                    <TextView
-                        android:id="@+id/followingText"
-                        android:layout_width="match_parent"
-                        android:layout_height="18dp"
-                        android:background="@android:color/white"
-                        android:gravity="center"
-                        android:text="Following" />
-
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/followingText"
+                    android:layout_width="match_parent"
+                    android:layout_height="18dp"
+                    android:background="@android:color/white"
+                    android:gravity="center"
+                    android:text="Following" />
 
             </LinearLayout>
 
         </LinearLayout>
-    </RelativeLayout>
+
+    </LinearLayout>
+</RelativeLayout>
