--- a/app/src/main/res/layout-v21/home_feed_fragment.xml
+++ b/app/src/main/res/layout-v21/home_feed_fragment.xml
@@ -7,6 +7,14 @@
     android:background="@color/colorBG"
     tools:context="com.example.cookzyme.cookzyme.HomeFeedFragment">
 
+    <ProgressBar
+        android:id="@+id/progressBarFeed"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="0dp" />
 
     <ListView
         android:id="@+id/listviewFeed"
