--- a/app/src/main/res/layout/activity_add_ingredient.xml
+++ b/app/src/main/res/layout/activity_add_ingredient.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
+    android:gravity="center_horizontal"
     android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
@@ -22,7 +23,7 @@
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:title="Refrigerator"
+            app:title="Add Ingredient"
             app:titleTextColor="@android:color/white"></android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
@@ -33,15 +34,30 @@
         android:layout_height="150dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
-        android:visibility="gone"
+        android:clickable="true"
         app:srcCompat="@drawable/egg" />
+
+    <TextView
+        android:id="@+id/or"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="------------ or ------------"
+        android:textAlignment="center" />
+
+    <Button
+        android:id="@+id/find"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="Find" />
 
     <ProgressBar
         android:id="@+id/progressBarAdd"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp" />
+        android:layout_margin="30dp"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/foodName"
@@ -73,7 +89,7 @@
 
         <EditText
             android:id="@+id/num"
-            android:layout_width="40dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:hint="@string/zero"
@@ -81,14 +97,12 @@
             android:maxLines="1"
             android:theme="@style/InputEditText" />
 
-        <TextView
-            android:id="@+id/pronoun"
+        <Spinner
+            android:id="@+id/pronounSpinner"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0.5"
-            android:gravity="center_vertical|center_horizontal"
-            android:text="ฟอง"
-            android:textColor="@android:color/black" />
+            android:gravity="center_vertical|center_horizontal" />
 
     </LinearLayout>
 
