--- a/app/src/main/res/layout/home_feed_fragment.xml
+++ b/app/src/main/res/layout/home_feed_fragment.xml
@@ -8,6 +8,15 @@
     tools:context="com.example.cookzyme.cookzyme.HomeFeedFragment">
 
 
+    <ProgressBar
+        android:id="@+id/progressBarFeed"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="0dp" />
+
     <ListView
         android:id="@+id/listviewFeed"
         android:layout_width="0dp"
