--- a/app/src/main/res/layout/singlerow_direction.xml
+++ b/app/src/main/res/layout/singlerow_direction.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
-              android:layout_height="24dp"
+              android:layout_height="wrap_content"
               android:background="#FFFFFF"
               android:gravity="center_vertical"
               android:orientation="horizontal"
@@ -11,24 +11,15 @@
     <TextView
         android:id="@+id/step"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_weight="1"
         android:ellipsize="end"
         android:gravity="center_vertical"
-        android:maxLines="1"
+        android:maxLines="100"
         android:text="1DOO"
         android:textColor="#000000"
         android:textSize="20sp"/>
-
-    <ImageView
-        android:id="@+id/signal"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginRight="30dp"
-        android:scaleX="0.35"
-        android:scaleY="0.35"
-        android:src="@drawable/warning"/>
 
 </LinearLayout>
