--- a/app/src/main/res/layout/singlerow_feed.xml
+++ b/app/src/main/res/layout/singlerow_feed.xml
@@ -88,9 +88,7 @@
                 android:layout_height="40dp"
                 android:layout_marginLeft="20dp"
                 android:scaleX="0.7"
-                android:scaleY="0.7"
-                android:src="@drawable/carrot_grey"
-                />
+                android:scaleY="0.7" />
 
             <TextView
                 android:id="@+id/likeNum"
